added better response handlong
