# src/internal/server/handlers/controller.go
@@ -10,7 +10,7 @@ func RegisterRoutes(router *gin.Engine) {
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	router.POST("/files", AddFile)
 	router.POST("/dirs", MakeDir)
-	router.GET("/dirs/:name", GetDir)
+	router.GET("/dirs/:name", GetDirInsides)
 	router.GET("/files", GetFiles)
 	router.GET("/files/:id", GetFile)
 	router.DELETE("files/:id", DeleteFile)
